# BaseProject

./: AGENTS.md  CLAUDE.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  decrypt-lib.cpp
app/src/main/res/color/: bottom_nav_color.xml  chip_background_color.xml  filter_background_color.xml  filter_text_color.xml
app/src/main/res/drawable/: bg_.xml  bg_adjust_num_item.xml  bg_bottom_bar.xml  bg_btn_primary_enable.xml  bg_dash.xml  bg_et_radius_10dp_ffffff.xml  bg_ffffff_stroke_1dp_ffffff.xml  bg_icon_social_media.xml  bg_item_shop_fragment.xml  bg_number_unsend_message.xml  bg_radius_12_b0d8b2.xml  bg_radius_12_stroke_1_color_primary.xml  bg_radius_29_9b9b9b.xml  bg_radius_29dp_db3022.xml  bg_radius_34dp_f9f9f9.xml  bg_radius_8dp_efefef.xml  bg_radius_8dp_efefef_stroke_1dp_9b9b9b.xml  bg_role.xml  bg_round_0e89f5_23b5f9_opacity_20.xml  bg_scrollview_detail_item.xml  divider_empty.xml  filter_background_color.xml  ic_arrow_forward.xml  ic_back.xml  ic_place_holder_avatar.xml  ic_place_holder_avatar_54.xml  ic_right_select_arrow_blue.xml  ic_vertical_menu.xml  icon_comment_fill.xml
app/src/main/res/layout/: activity_main.xml  bottom_sheet_change_password.xml  bottom_sheet_filter.xml  bottom_sheet_withdraw.xml  dialog_number_picker.xml  dialog_payment.xml  dialog_pop_up_window.xml  fragment_camera.xml  fragment_cart.xml  fragment_chat.xml  fragment_detail_image.xml  fragment_detail_product.xml  fragment_fashion.xml  fragment_favorite.xml  (+42 more)
gradle/wrapper/: gradle-wrapper.properties
(+176 files in other folders)
